# platform

./: .cursorrules  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Makefile  README.md  SETUP.md  pyproject.toml
config/: default.yaml  dev-local.yaml  offline-guards.yaml  offline-mock.yaml  openai-guards.yaml  split.yaml  test.yaml
docker/: milvus-standalone.yml
docs/: TESTING_AND_WORKFLOW.md
docs/adr/: 0001-hybrid-architecture.md  0002-langgraph-pipeline.md  0003-rag-port-adapter.md  0004-import-linter.md  0005-mlflow-tracking.md  0006-human-in-the-loop.md  0007-technology-stack.md  0008-mandatory-content-guards.md  0008-rules-engine-selection.md  0009-multi-store-memory.md  0010-distributed-a2a-agents.md  0011-remove-demo-applications.md
docs/architecture/: agent-communication-and-memory.md  agent-registry-and-discovery.md  platform-enhancements.md
scripts/: run-all.ps1  seed_rag.py  start_mlflow.sh
services/agents/: .env.example  README.md  mcp_weather_server.py  outage_agent.py  prompts.py  pyproject.toml  rag_agent.py  weather_agent.py
services/rag_service/: pyproject.toml
services/rag_service/src/rag_service/: __init__.py  api.py  indexer.py  main.py  retriever.py
services/registry/: .env.example  README.md  pyproject.toml
services/registry/src/registry_service/: __init__.py  agent_meta.py  contracts.py  service.py  store.py
services/registry/tests/: test_models.py
src/: app.py
src/applications/: __init__.py  providers.py
src/applications/outage/: __init__.py  agent.py
src/applications/rag/: __init__.py  agent.py
src/applications/weather/: __init__.py  agent.py
src/genie/: __init__.py
src/genie/a2a/: __init__.py  agent_card.py  client.py  types.py
src/genie/agents/: __init__.py  base.py  registry.py  remote.py
src/genie/application/: __init__.py  blackboard.py  checkpointer.py  dag.py  graph.py  parsing.py  prompts.py  state.py
src/genie/application/nodes/: __init__.py  completion_gate.py  executor.py  guards.py  orchestrator.py  planner.py  router.py  synthesizer.py
src/genie/discovery/: __init__.py  agent_meta.py  client.py
src/genie/interface/: __init__.py  bootstrap.py
src/genie/interface/routers/: __init__.py  agents.py  chat.py  health.py  rag.py  ui.py
src/genie/interface/static/: index.html  trace.html
src/genie/llm/: __init__.py  base.py  mock.py  openai_compat.py  registry.py
src/genie/mcp/: __init__.py  client.py  tool_adapter.py
src/genie/memory/: __init__.py  facade.py  factory.py  in_memory.py  ports.py
src/genie/memory/adapters/: __init__.py  mongo.py  redis.py  vector.py
src/genie/observability/: __init__.py  correlation.py  logging.py  metrics.py
src/genie/platform/: __init__.py  config.py  errors.py  event_bus.py  feature_flags.py
src/genie/rag/: __init__.py  factory.py
src/genie/rag/adapters/: __init__.py  local.py  remote.py
src/genie/security/: __init__.py  auth.py  guard.py
src/genie/tools/: __init__.py  base.py  gateway.py
src/genie/tracking/: __init__.py  mlflow_tracker.py
tests/: conftest.py
tests/contract/: test_import_contracts.py
tests/e2e/: test_api.py
tests/integration/: test_pipeline.py  test_rag_adapter.py
tests/unit/: test_agents.py  test_applications.py  test_completion_gate.py  test_dag.py  test_discovery.py  test_event_bus.py  test_executor_node.py  test_guards.py  test_llm.py  test_memory.py  test_parsing.py  test_planner_node.py  test_remote_agent.py  test_router_node.py  test_router_toggle.py  test_state.py  test_synthesizer_node.py
