[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-platform"
version = "0.1.0"
description = "Production-grade AI platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.1",
    "langchain-core>=0.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "mlflow>=2.13",
    "python-multipart>=0.0.9",
    "anyio>=4.3",
    "openai>=1.30",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "swagger-ui-bundle>=1.1.0",
    "genie-rag-contracts",
]

[project.optional-dependencies]
# Mandatory content guards (input/output scanning). Heavy: pulls torch,
# transformers, spacy, presidio. Guards default ON (enable_guards=true), so the
# default run profile installs this extra: `uv sync --extra guards`.
guards = ["llm-guard>=0.3.15"]
# Multi-store memory backends — each no-ops unless its config is set.
memory-mongo = ["motor>=3.4"]
memory-redis = ["redis>=4.2"]
# Pinned <3: pymilvus 3.x changes the server pairing; the VectorStore adapter and
# the docker/milvus-standalone.yml server image target the stable 2.5.x line.
memory-vector = ["pymilvus[milvus_lite]>=2.5,<3"]
memory-postgres = ["psycopg2-binary>=2.9"]
# Local multi-intent classifier for the router (reuses torch from guards).
router-classifier = ["sentence-transformers>=2.7"]
# Convenience: everything (guards + all memory backends + router classifier).
all = [
    "llm-guard>=0.3.15",
    "motor>=3.4",
    "redis>=4.2",
    "pymilvus[milvus_lite]>=2.5,<3",
    "psycopg2-binary>=2.9",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "httpx>=0.27",
    "mongomock-motor>=0.0.21",
    "fakeredis>=2.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "import-linter>=2.1",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genie", "src/applications"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
managed = true

[tool.uv.sources]
genie-rag-contracts = { path = "packages/genie-rag-contracts", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.importlinter]
root_packages = "genie"
include_external_packages = true
