[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genie-rag-service"
version = "0.1.0"
description = "Standalone RAG microservice for the Genie platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "genie-rag-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.uv.sources]
genie-rag-contracts = { path = "../../packages/genie-rag-contracts", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
