[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "registry-service"
version = "0.1.0"
description = "Standalone agent discovery / registry service for the Genie platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "motor>=3.4",
    "python-dotenv>=1.0",
    "genie-agent-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.uv.sources]
genie-agent-contracts = { path = "../../packages/genie-agent-contracts", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/registry_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
